Homework4/flaskapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
  labels:
    app: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: ahmad791/flaskapp:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
  labels:
    app: flaskapp
spec:
  type: ClusterIP
  selector:
    app: flaskapp
  ports:
  - name: flaskapp
    port: 5000
